<resources>
	<string name="abc_action_bar_home_description">Navigate home</string>
	<string name="abc_action_bar_up_description">Navigate up</string>
	<string name="abc_action_menu_overflow_description">More options</string>
	<string name="abc_action_mode_done">Done</string>
	<string name="abc_activity_chooser_view_see_all">See all</string>
	<string name="abc_activitychooserview_choose_application">Choose an app</string>
	<string name="abc_capital_off">OFF</string>
	<string name="abc_capital_on">ON</string>
	<string name="abc_menu_alt_shortcut_label">Alt+</string>
	<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
	<string name="abc_menu_delete_shortcut_label">delete</string>
	<string name="abc_menu_enter_shortcut_label">enter</string>
	<string name="abc_menu_function_shortcut_label">Function+</string>
	<string name="abc_menu_meta_shortcut_label">Meta+</string>
	<string name="abc_menu_shift_shortcut_label">Shift+</string>
	<string name="abc_menu_space_shortcut_label">space</string>
	<string name="abc_menu_sym_shortcut_label">Sym+</string>
	<string name="abc_prepend_shortcut_label">Menu+</string>
	<string name="abc_search_hint">Search…</string>
	<string name="abc_searchview_description_clear">Clear query</string>
	<string name="abc_searchview_description_query">Search query</string>
	<string name="abc_searchview_description_search">Search</string>
	<string name="abc_searchview_description_submit">Submit query</string>
	<string name="abc_searchview_description_voice">Voice search</string>
	<string name="abc_shareactionprovider_share_with">Share with</string>
	<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
	<string name="abc_toolbar_collapse_description">Collapse</string>
	<string name="accept">Accept</string>
	<string name="accept_images">Accept images of this person?</string>
	<string name="action_add_favorite">Add to favorites</string>
	<string name="action_backup">Backup</string>
	<string name="action_backup_msg">Backup started</string>
	<string name="action_block">Block User</string>
	<string name="action_blocked_list">Blocked Users</string>
	<string name="action_change_image">Change</string>
	<string name="action_edit_profile">Edit Profile</string>
	<string name="action_info">Info</string>
	<string name="action_invert">Invert selected</string>
	<string name="action_profile_detail">Profile Details</string>
	<string name="action_remove_favorite">Remove from favorites</string>
	<string name="action_remove_image">Remove</string>
	<string name="action_rules">Rules</string>
	<string name="action_select_all">Select all</string>
	<string name="action_settings">Settings</string>
	<string name="action_share">Share</string>
	<string name="action_unblock">Unblock</string>
	<string name="action_visitors_profile">Profile Visitors</string>
	<string name="ad_unit_app_id">ca-app-pub-2058326140700035~5609511602</string>
	<string name="ad_unit_id_banner_talks">ca-app-pub-2058326140700035/4278699971</string>
	<string name="ad_unit_id_open_talk">ca-app-pub-2058326140700035/9610917706</string>
	<string name="ad_unit_id_splash_screen">ca-app-pub-2058326140700035/5811273494</string>
	<string name="ad_unit_id_test">ca-app-pub-2058326140700035/7755111914</string>
	<string name="age_range">Age range</string>
	<string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
	<string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
	<string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
	<string name="al_exo_controls_fastforward_description">Fast forward</string>
	<string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
	<string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
	<string name="al_exo_controls_hide">Hide player controls</string>
	<string name="al_exo_controls_next_description">Next</string>
	<string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
	<string name="al_exo_controls_overflow_show_description">Show additional settings</string>
	<string name="al_exo_controls_pause_description">Pause</string>
	<string name="al_exo_controls_play_description">Play</string>
	<string name="al_exo_controls_playback_speed">Speed</string>
	<string name="al_exo_controls_playback_speed_normal">Normal</string>
	<string name="al_exo_controls_previous_description">Previous</string>
	<string name="al_exo_controls_repeat_all_description">Repeat all</string>
	<string name="al_exo_controls_repeat_off_description">Repeat none</string>
	<string name="al_exo_controls_repeat_one_description">Repeat one</string>
	<string name="al_exo_controls_rewind_description">Rewind</string>
	<string name="al_exo_controls_seek_bar_description">Playback progress</string>
	<string name="al_exo_controls_settings_description">Settings</string>
	<string name="al_exo_controls_show">Show player controls</string>
	<string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
	<string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
	<string name="al_exo_controls_stop_description">Stop</string>
	<string name="al_exo_controls_time_placeholder">00:00:00</string>
	<string name="al_exo_controls_vr_description">VR mode</string>
	<string name="al_exo_download_completed">Download completed</string>
	<string name="al_exo_download_description">Download</string>
	<string name="al_exo_download_downloading">Downloading</string>
	<string name="al_exo_download_failed">Download failed</string>
	<string name="al_exo_download_notification_channel_name">Downloads</string>
	<string name="al_exo_download_paused">Downloads paused</string>
	<string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
	<string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
	<string name="al_exo_download_removing">Removing downloads</string>
	<string name="also_block_title">Block User</string>
	<string name="always_accept_images">Always accept images</string>
	<string name="always_accept_images_desc">Accept images from everyone without confirmation.</string>
	<string name="anyone">Men and Women</string>
	<string name="block_title">Block User</string>
	<string name="change_background_title">Change Background</string>
	<string name="clean_messages">Clear Chat</string>
	<string name="clean_messages_delete_media">Delete all downloaded content</string>
	<string name="delete_account_desc_settings">If you delete your account, you will permanently lose your profile, messages, photos, and friends. Your account and all data will be deleted within 30 days. Your account will be deactivated during this period, and no one will be able to find you. If you log in again during this period, the deletion will be automatically canceled.</string>
	<string name="delete_account_settings">Delete Account</string>
	<string name="delete_chat">Delete Chat</string>
	<string name="delete_chat_fav_confirm">Don\'t delete favorites</string>
	<string name="delete_chat_message">This chat and all messages will be deleted.</string>
	<string name="dialog_sexuality_header">We do not permit images, text, or any content that contains or promotes sexually explicit material, including pornography. Additionally, our services must not be used for any content or activities intended to be sexually gratifying. Violation of this policy will lead to appropriate sanctions, including but not limited to account suspension or termination.</string>
	<string name="dialog_sexuality_item1">Depictions of sex acts or sexually suggestive poses are prohibited.</string>
	<string name="dialog_sexuality_item2">Promotional images of sex toys are not allowed.</string>
	<string name="dialog_sexuality_item3">Promoting sexually explicit content is prohibited.</string>
	<string name="dialog_sexuality_item4">Content that depicts, describes, or encourages bestiality is prohibited.</string>
	<string name="dialog_sexuality_item5">Promote escort services or other services that could be interpreted as offering sexual acts in exchange for compensation.</string>
	<string name="dialog_sexuality_item6">Users are prohibited from using offensive or inappropriate nicknames.</string>
	<string name="dialog_sexuality_item7">Sharing personal phone numbers or social media accounts on our platform is prohibited.</string>
	<string name="dialog_sexuality_item8">Selling any type of content or requiring money from other users through our platform is strictly forbidden.</string>
	<string name="dialog_sexuality_item9">Our apps strictly forbid any activities that could harm children.</string>
	<string name="dialog_sexuality_items">Here are some examples of common violations:</string>
	<string name="discovery_desc_title_settings">While turned off, you will not be discoverable. However, you can still see and chat with your friends.</string>
	<string name="discovery_show_me_title_settings">Show me in Discovery</string>
	<string name="discovery_title_settings">Discovery Settings</string>
	<string name="dont_worry">* Don\'t worry, you will remain anonymous.</string>
	<string name="gender">Gender</string>
	<string name="id_profile">User 1</string>
	<string name="id_profile2">User 2</string>
	<string name="id_talk">Talk Id</string>
	<string name="info_profile">View Contact</string>
	<string name="last_updated">Last updated</string>
	<string name="logout_desc_settings">Your messages cannot be restored.</string>
	<string name="logout_settings">Logout</string>
	<string name="looking_for">Looking for</string>
	<string name="men">Men</string>
	<string name="my_account_title_settings">My Account</string>
	<string name="new_messages_confirm_read">Read receipts</string>
	<string name="new_messages_confirm_read_desc">If you turn off read receipts, you won\'t able to see read receipts from other people.</string>
	<string name="new_messages_download">Media Auto-Download</string>
	<string name="new_messages_download_audio">Voice Messages are always automatically downloaded for the best communication experience.</string>
	<string name="new_messages_title_settings">Messages</string>
	<string name="nick">Nickname</string>
	<string name="notification_setting">Display notification</string>
	<string name="privacy_last_seen_subtitle">Don\'t share Last Seen</string>
	<string name="privacy_last_seen_summary">If you don\'t share your Last Seen, you won\'t be able to see other people\'s Last Seen.</string>
	<string name="privacy_terms">Privacy Policy &amp; Terms of Use</string>
	<string name="privacy_title_settings">Privacy</string>
	<string name="profile">Profile</string>
	<string name="register_checkbox_age">I confirm that I\'m 18 years old or over.</string>
	<string name="register_checkbox_terms">I accept the Privacy Policy &amp; Terms of Use.</string>
	<string name="register_continue_anonymous">Continue without login</string>
	<string name="register_continue_facebook">Continue with Facebook</string>
	<string name="register_continue_google">Continue with Google</string>
	<string name="register_inappropriate">I understand that sharing inappropriate content will not be tolerated.</string>
	<string name="register_line1">Chat anonymously and meet new friends.</string>
	<string name="register_share">We don\'t post anything to Facebook or Google.</string>
	<string name="register_terms"><u>Privacy Policy &amp; Terms of Use.</u></string>
	<string name="register_welcome">Welcome to RandoChat</string>
	<string name="remove_ads">Remove Ads</string>
	<string name="report_profile">Report User</string>
	<string name="send_image">Send Photo</string>
	<string name="talk_details">Talk Details</string>
	<string name="talks_subtitle_settings">Delete old conversations</string>
	<string name="talks_summary_settings">Delete conversations older than %s days. Favorite conversations will not be deleted.</string>
	<string name="talks_title_settings">Conversations</string>
	<string name="women">Women</string>
</resources>