<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="15.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sexuality_header" />
        <TextView
            android:id="@id/textView3"
            android:paddingTop="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sexuality_items" />
        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="13.0dip">
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item1" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item2" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item3" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item4" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item5" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item6" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item7" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item8" />
            <TextView
                android:paddingTop="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sexuality_item9" />
        </LinearLayout>
        <TextView
            android:gravity="center_horizontal"
            android:id="@id/terms_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/register_terms"
            android:maxLines="2"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>