<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textSize="24.0sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingTop="10.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_chat"
        android:textAlignment="center" />
    <TextView
        android:gravity="center_horizontal"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_chat_message"
        android:textAlignment="center" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@id/switch_delete_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/clean_messages_delete_media" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@id/switch_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/also_block_title" />
</LinearLayout>