<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_search_white"
        android:id="@id/search"
        android:title="Search"
        myapp:actionViewClass="androidx.appcompat.widget.SearchView"
        myapp:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@id/action_profile"
        android:title="@string/action_edit_profile"
        myapp:showAsAction="never" />
    <item
        android:id="@id/action_remove_ads"
        android:title="@string/remove_ads"
        myapp:showAsAction="never" />
    <item
        android:id="@id/action_settings"
        android:title="@string/action_settings"
        myapp:showAsAction="never" />
</menu>